add_executable(first-missing-positive first-missing-positive.cpp)
add_executable(trapping-rain-water trapping-rain-water.cpp)
add_executable(max-chunks-to-make-sorted max-chunks-to-make-sorted.cpp)
add_executable(reverse-pairs reverse-pairs.cpp)
add_executable(max-sliding-window max-sliding-window.cpp)
add_executable(candy-greedy-distribution candy-greedy-distribution.cpp)
add_executable(median-of-two-sorted-arrays median-of-two-sorted-arrays.cpp)
add_executable(min-window-substring min-window-substring.cpp)
add_executable(subarrays-k-diff-integers subarrays-k-diff-integers.cpp)
add_executable(largest-rectangle-in-histogram largest-rectangle-in-histogram.cpp)