add_executable(first-missing-positive-1 first-missing-positive-1.cpp)
add_executable(trapping-rain-water-1 trapping-rain-water-1.cpp)
add_executable(max-chunks-to-make-sorted max-chunks-to-make-sorted.cpp)
add_executable(reverse-pairs reverse-pairs.cpp)
add_executable(max-sliding-window max-sliding-window.cpp)
add_executable(candy-greedy-distribution candy-greedy-distribution.cpp)
add_executable(median-of-two-sorted-arrays-1 median-of-two-sorted-arrays-1.cpp)
add_executable(min-window-substring-1 min-window-substring-1.cpp)
add_executable(subarrays-k-diff-integers subarrays-k-diff-integers.cpp)
add_executable(largest-rectangle-in-histogram-1 largest-rectangle-in-histogram-1.cpp)