# Create an executable for each problem file
add_executable(two-sum two-sum.cpp)
add_executable(remove-duplicates-sorted-array remove-duplicates-sorted-array.cpp)
add_executable(majority-element majority-element.cpp)
add_executable(best-time-buy-sell best-time-buy-sell.cpp)
add_executable(move-zeroes move-zeroes.cpp)
add_executable(squares-sorted-array squares-sorted-array.cpp)
add_executable(merge-sorted-array merge-sorted-array.cpp)
add_executable(pivot-index pivot-index.cpp)
add_executable(valid-mountain-array valid-mountain-array.cpp)
add_executable(plus-one plus-one.cpp)
# You can easily link external libraries here if you add benchmarking tools or testing frameworks later