
add_executable(three-sum three-sum.cpp)
add_executable(subarray-sum-equals-k subarray-sum-equals-k.cpp)
add_executable(next-permutation next-permutation.cpp)
add_executable(product-of-array-except-self product-of-array-except-self.cpp)
add_executable(spiral-matrix spiral-matrix.cpp)
add_executable(container-with-most-water container-with-most-water.cpp)
add_executable(longest-turbulent-subarray longest-turbulent-subarray.cpp)
add_executable(rotate-image rotate-image.cpp)
add_executable(insert-delete-getrandom insert-delete-getrandom.cpp)
add_executable(max-subarray max-subarray.cpp)