add_executable(count-primes count-primes.cpp)
add_executable(gcd-strings gcd-strings.cpp)
add_executable(palindrome-number palindrome-number.cpp)
add_executable(ugly-number ugly-number.cpp)
add_executable(excel-sheet-column-title excel-sheet-column-title.cpp)
add_executable(add-binary add-binary.cpp)
add_executable(happy-number happy-number.cpp)
add_executable(power-of-three power-of-three.cpp)
add_executable(valid-perfect-square valid-perfect-square.cpp)
add_executable(min-moves-to-equal-array-elements min-moves-to-equal-array-elements.cpp)