add_executable(x-power-n x-power-n.cpp)
add_executable(int-to-roman int-to-roman.cpp)
add_executable(count-numbers-unique-digits count-numbers-unique-digits.cpp)
add_executable(valid-square valid-square.cpp)
add_executable(unique-paths unique-paths.cpp)
add_executable(nth-magical-number nth-magical-number.cpp)
add_executable(reordered-power-of-two reordered-power-of-two.cpp)
add_executable(super-power super-power.cpp)
add_executable(continuous-subarray-sum-1 continuous-subarray-sum-1.cpp)
add_executable(prime-factorisation prime-factorisation.cpp)