add_executable(max-points-on-line-1 max-points-on-line-1.cpp)
add_executable(permutation-sequence permutation-sequence.cpp)
add_executable(poor-pigs-problem poor-pigs-problem.cpp)
add_executable(preimage-size-of-factorial-zeroes-function preimage-size-of-factorial-zeroes-function.cpp)
add_executable(numbers-atmost-n-given-digit-set numbers-atmost-n-given-digit-set.cpp)
add_executable(count-primes-in-range count-primes-in-range.cpp)
add_executable(reachable-nodes-in-subdivided-graph reachable-nodes-in-subdivided-graph.cpp)
add_executable(max-scored-words-by-letters max-scored-words-by-letters.cpp)
add_executable(best-position-for-service-centre best-position-for-service-centre.cpp)
add_executable(sum-of-floyd-warshall sum-of-floyd-warshall.cpp)