add_executable(number-of-1-bits number-of-1-bits.cpp)
add_executable(counting-bits counting-bits.cpp)
add_executable(reverse-bits reverse-bits.cpp)
add_executable(single-number-1 single-number-1.cpp)
add_executable(missing-number missing-number.cpp)
add_executable(power-of-two power-of-two.cpp)
add_executable(hamming-distance hamming-distance.cpp)
add_executable(altering-bits altering-bits.cpp)
add_executable(binary-number-altering-bits binary-number-altering-bits.cpp)
add_executable(number-complement number-complement.cpp)
